[gd_scene load_steps=10 format=4 uid="uid://cl3xom52hxclb"]

[ext_resource type="Script" uid="uid://cg4hox5gx6bb8" path="res://Scripts/world.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://be6ecllcg5kde" path="res://Scenes/nate.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://d0gdyiup5y70a" path="res://Scenes/gopissgirl.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://hali25aiaah3" path="res://Scenes/sink.tscn" id="4"]
[ext_resource type="Texture2D" uid="uid://i728kcang6gs" path="res://Assests/floor tiles.png" id="5"]
[ext_resource type="PackedScene" uid="uid://b133aysgkpmoq" path="res://Scenes/kitdy.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bwdgtebrwfeh0" path="res://Scenes/hearts_container.tscn" id="7"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_go701"]
texture = ExtResource("5")
texture_region_size = Vector2i(174, 174)
0:0/0 = 0
0:0/0/script = null
1:0/0 = 0
1:0/0/script = null
2:0/0 = 0
2:0/0/script = null
3:0/0 = 0
3:0/0/script = null
4:0/0 = 0
4:0/0/script = null
6:0/0 = 0
6:0/0/script = null
7:0/0 = 0
7:0/0/script = null
8:0/0 = 0
8:0/0/script = null
0:1/0 = 0
0:1/0/script = null
1:1/0 = 0
1:1/0/script = null
2:1/0 = 0
2:1/0/script = null
3:1/0 = 0
3:1/0/script = null
4:1/0 = 0
4:1/0/script = null
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-87, -60.5, 87, -56.5, 87, 14.5, -87, 16.5)
9:1/0/script = null
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-87, -58.5, 64.5, -57.5, 66.5, 87, -24.5, 87, -23.6557, 13.5442, -87, 11.5)
10:1/0/script = null
0:2/0 = 0
0:2/0/script = null
1:2/0 = 0
1:2/0/script = null
2:2/0 = 0
2:2/0/script = null
3:2/0 = 0
3:2/0/script = null
4:2/0 = 0
4:2/0/script = null
9:2/0 = 0
9:2/0/script = null
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-22.5, -87, 69.5, -87, 66.5, 87, -24.5, 87)
10:2/0/script = null
6:3/0 = 0
6:3/0/script = null
7:3/0 = 0
7:3/0/script = null
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-49.5, -87, 37.5, -87, 40.5, -12.5, 87, -11.5, 87, 63.5, -48.5, 61.5)
8:3/0/script = null
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-87, -12.5, 87, -11.5, 87, 63.5, -87, 59.5)
9:3/0/script = null
10:3/0 = 0
10:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-27.5, -87, 66.5, -87, 67.5, 59.5, -87, 64.5, -87, -11.5, -23.5, -12.5)
10:3/0/script = null
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-49.5, -87, 37.5, -87, 38.5, -2.5, 37.5, 87, -40.5, 87)
8:2/0/script = null
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-47.5, -56.5, 87, -56.5, 87, 14.5, 37.5, 15.5, 37.5, 87, -40.5, 87)
8:1/0/script = null
6:1/0 = 0
6:1/0/script = null
7:1/0 = 0
7:1/0/script = null
7:2/0 = 0
7:2/0/script = null
6:2/0 = 0
6:2/0/script = null

[sub_resource type="TileSet" id="TileSet_5a7ea"]
tile_size = Vector2i(174, 174)
physics_layer_0/collision_layer = 1
sources/8 = SubResource("TileSetAtlasSource_go701")

[node name="World" type="Node2D"]
script = ExtResource("1")
nate_scene = ExtResource("2")
gopissgirl_scene = ExtResource("3")
sink_scene = ExtResource("4")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_5a7ea")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65544, 1, 65537, 458760, 2, 131074, 65544, 1, 196611, 589832, 2, 262148, 458760, 2, 327685, 589832, 2, 1, 65544, 1, 65538, 65544, 1, 131075, 458760, 2, 196612, 458760, 2, 262149, 65544, 1, 327686, 589832, 2, 327684, 589832, 2, 262147, 458760, 2, 196610, 65544, 1, 131073, 458760, 2, 65536, 458760, 2, 2, 65544, 1, 65539, 589832, 2, 131076, 589832, 2, 196613, 65544, 1, 262150, 589832, 2, 3, 458760, 2, 65540, 589832, 2, 131077, 65544, 1, 196614, 458760, 2, 262151, 589832, 2, 327688, 589832, 2, 327687, 458760, 2, 327683, 458760, 2, 262146, 458760, 2, 196609, 458760, 2, 131072, 458760, 2, 131071, 65544, 1, 65535, 458760, 2, 4, 589832, 2, 131078, 589832, 2, 262152, 589832, 2, 327682, 589832, 2, 262144, 65544, 1, 196607, 589832, 2, 196608, 458760, 2, 262145, 65544, 1, 327680, 458760, 2, 327681, 589832, 2, 393215, 589832, 2, 262143, 589832, 2, 327679, 65544, 1, 8, 589832, 2, 131080, 589832, 2, 65544, 65544, 1, 196616, 458760, 2, 196615, 458760, 2, 65541, 65544, 1, 65542, 65544, 1, 7, 458760, 2, 5, 65544, 1, 65543, 65544, 1, 6, 589832, 2, 131079, 458760, 2, -1, 589832, 2, -65528, 589832, 2, -65533, 458760, 2, -65531, 65544, 1, -65536, 589832, 2, -65529, 589832, 2, -65535, 589832, 2, -65530, 458760, 2, -65532, 458760, 2, -65534, 589832, 2, 327689, 589832, 536870914, 262153, 589832, 536870914, 196617, 589832, 536870914, 131081, 589832, 536870914, 65545, 65544, 1, 9, 589832, 536870914, -65527, 589832, 536870914, 393214, 589832, 2, 327678, 65544, 1, 262142, 589832, 2, 196606, 589832, 2, 131070, 589832, 2, 65534, 589832, 2, -2, 589832, 2, -65538, 589832, 2, -131063, 589832, 536870914, 393225, 65544, 1, 458750, 65544, 1, -65537, 589832, 2, -131072, 589832, 2, -131071, 589832, 2, -131070, 589832, 2, -131069, 589832, 2, -131068, 589832, 2, -131067, 65544, 1, -131066, 589832, 2, -131065, 589832, 2, -131064, 589832, 2, 458751, 65544, 1, 393216, 65544, 1, 393217, 65544, 1, 393218, 65544, 1, 393219, 65544, 1, 393220, 65544, 1, 393221, 65544, 1, 393222, 65544, 1, 393223, 65544, 1, 393224, 65544, 1, -262148, 589832, 536870914, -262147, 589832, 536870914, -262146, 589832, 536870914, -262145, 589832, 536870914, -327680, 589832, 536870914, -327679, 589832, 536870914, -327678, 589832, 536870914, -327677, 589832, 536870914, -327676, 589832, 536870914, -327675, 589832, 536870914, -327674, 589832, 536870914, -327673, 589832, 536870914, -327672, 589832, 536870914, -327671, 589832, 536870914, -262135, 65544, 1, -262134, 589832, 536870914, -196598, 65544, 1, -196597, 589832, 536870914, -131061, 589832, 536870914, -65525, 589832, 536870914, 11, 589832, 536870914, 65547, 589832, 536870914, 131083, 589832, 536870914, 196619, 589832, 536870914, 262155, 589832, 536870914, 327691, 589832, 536870914, 393227, 65544, 1, 458763, 589832, 536870914, 458762, 589832, 536870914, 458761, 589832, 536870914, 458760, 589832, 536870914, 458759, 589832, 536870914, 458758, 589832, 536870914, 458757, 589832, 536870914, 458756, 589832, 536870914, 458755, 589832, 536870914, 524291, 589832, 536870914, 524290, 589832, 536870914, 524289, 589832, 536870914, 524288, 589832, 536870914, 589823, 589832, 536870914, 589822, 589832, 536870914, 589821, 589832, 536870914, 589820, 589832, 536870914, 524284, 589832, 536870914, 458748, 65544, 1, 393212, 589832, 536870914, 393211, 589832, 536870914, 327675, 589832, 536870914, 262139, 589832, 536870914, 196603, 589832, 536870914, 131067, 589832, 536870914, 65531, 589832, 536870914, -5, 589832, 536870914, -65541, 589832, 536870914, -131077, 589832, 536870914, -196613, 589832, 536870914, -262149, 589832, 536870914, 458747, 589832, 536870914, 524283, 589832, 536870914, 589819, 589832, 536870914, 524292, 589832, 536870914, 524293, 589832, 536870914, 524294, 589832, 536870914, 524295, 589832, 536870914, 524296, 589832, 536870914, 524297, 589832, 536870914, 524298, 589832, 536870914, 524299, 589832, 536870914, -262133, 589832, 536870914, -327669, 589832, 536870914, -327670, 589832, 536870914, -131062, 65544, 1, -65526, 65544, 1, 10, 65544, 1, 65546, 589832, 536870914, 131082, 589832, 536870914, 196618, 589832, 536870914, 262154, 589832, 536870914, 327690, 589832, 536870914, 393226, 65544, 1, -196600, 589832, 536870914, -262136, 65544, 1, -262140, 589832, 536870914, -262141, 589832, 536870914, -262142, 589832, 536870914, -262139, 589832, 2, -262138, 65544, 1, -262137, 65544, 1, -196601, 589832, 536870914, -196599, 589832, 536870914, -196602, 589832, 536870914, -196603, 65544, 1, -196604, 589832, 536870914, -196605, 589832, 536870914, -196606, 65544, 1, -196607, 589832, 536870914, -196608, 589832, 536870914, -131073, 589832, 536870914, -131074, 589832, 536870914, -131075, 65544, 1, -262143, 65544, 1, -262144, 65544, 1, -196612, 589832, 536870914, -196611, 589832, 536870914, -196610, 65544, 1, -196609, 65544, 1, -65539, 589832, 536870914, -65540, 65544, 1, -4, 65544, 1, 65532, 65544, 1, 131068, 65544, 1, 196604, 65544, 1, -131076, 589832, 536870914, 262140, 65544, 1, 327676, 589832, 536870914, -3, 589832, 536870914, 65533, 589832, 536870914, 131069, 589832, 536870914, 196605, 589832, 536870914, 262141, 589832, 536870914, 327677, 65544, 1, 393213, 589832, 536870914, 458749, 65544, 1, 524286, 589832, 536870914, 524287, 589832, 536870914, 458752, 589832, 536870914, 458753, 589832, 536870914, 524285, 589832, 536870914, 458754, 589832, 536870914, -327685, 589832, 536870914, -327684, 589832, 536870914, -327683, 589832, 536870914, -327682, 589832, 536870914, -327681, 589832, 536870914, -393216, 589832, 536870914, -393215, 589832, 536870914, -393214, 589832, 536870914, -393213, 589832, 536870914, -393212, 589832, 536870914, -393211, 589832, 536870914, -393210, 589832, 536870914, -393209, 589832, 536870914, -393208, 589832, 536870914, -393207, 589832, 536870914, -393206, 589832, 536870914, -393205, 589832, 536870914, -327668, 589832, 536870914, -327667, 589832, 536870914, -327666, 589832, 536870914, -393204, 589832, 536870914, -393203, 589832, 536870914, -393202, 589832, 536870914, -393201, 589832, 536870914, -393200, 589832, 536870914, -327663, 589832, 536870914, -196591, 65544, 1, -196592, 589832, 536870914, -262128, 65544, 1, -393199, 589832, 536870914, -131055, 65544, 1, -65519, 65544, 1, -65518, 589832, 536870914, 18, 589832, 536870914, 65554, 589832, 536870914, 131090, 589832, 536870914, 196626, 589832, 536870914, -393198, 589832, 536870914, -327662, 589832, 536870914, -262126, 589832, 536870914, -196590, 589832, 536870914, -131054, 589832, 536870914, 262162, 589832, 536870914, 327698, 589832, 536870914, 393234, 589832, 536870914, 393233, 65544, 1, 458769, 589832, 536870914, 458770, 589832, 536870914, 524306, 589832, 536870914, 524305, 589832, 536870914, 524304, 589832, 536870914, 524303, 589832, 536870914, 524302, 589832, 536870914, 524301, 589832, 536870914, 524300, 589832, 536870914, -262132, 589832, 536870914, -262131, 589832, 536870914, -196595, 65544, 1, -131059, 65544, 1, -65523, 65544, 1, 14, 65544, 1, 65550, 589832, 536870914, 15, 65544, 1, -65521, 589832, 536870914, -131057, 589832, 536870914, -196593, 589832, 536870914, -327664, 589832, 536870914, -327665, 589832, 536870914, -262129, 65544, 1, 65552, 589832, 536870914, 131088, 589832, 536870914, 196624, 589832, 536870914, 262160, 65544, 1, 262159, 65544, 1, 196623, 589832, 536870914, 131087, 589832, 536870914, 65551, 589832, 536870914, -65520, 589832, 536870914, -131056, 589832, 536870914, 17, 65544, 1, 65553, 65544, 1, 131089, 65544, 1, 262161, 589832, 536870914, 196625, 65544, 1, 327697, 589832, 536870914, 327696, 589832, 536870914, 327695, 589832, 536870914, 393230, 65544, 1, 393229, 65544, 1, 393228, 65544, 1, 458766, 589832, 536870914, 327693, 589832, 536870914, 262157, 589832, 536870914, 196621, 65544, 1, 196620, 589832, 536870914, 131084, 589832, 536870914, 65548, 589832, 536870914, -65524, 589832, 536870914, 12, 589832, 536870914, 262156, 589832, 536870914, 327692, 589832, 536870914, -196594, 589832, 536870914, -131058, 589832, 536870914, -65522, 589832, 536870914, 131085, 589832, 536870914, -131060, 589832, 536870914, -262130, 65544, 1, -196596, 589832, 536870914, 16, 65544, 1, 393231, 65544, 1, 327694, 589832, 536870914, 262158, 65544, 1, 65549, 589832, 536870914, 13, 589832, 536870914, 131086, 589832, 536870914, 393232, 65544, 1, 458764, 589832, 536870914, 458767, 589832, 536870914, 458768, 589832, 536870914, 458765, 589832, 536870914, 196622, 589832, 536870914, -393220, 589832, 1, -393219, 589832, 1, -393218, 589832, 1, -393217, 589832, 1, -458752, 589832, 1, -458751, 589832, 1, -458750, 589832, 1, -458749, 589832, 1, -458748, 589832, 1, -458747, 589832, 1, -458746, 589832, 1, -458745, 589832, 1, -458744, 589832, 1, -458743, 589832, 1, -458742, 589832, 1, -458741, 589832, 1, -458740, 589832, 1, -458739, 589832, 1, -458738, 589832, 1, -458737, 589832, 1, -458736, 589832, 1, -458735, 589832, 1, 655356, 589832, 3, 655357, 589832, 3, 655358, 589832, 3, 655359, 589832, 3, 589824, 589832, 3, 589825, 589832, 3, 589826, 589832, 3, 589827, 589832, 3, 589828, 589832, 3, 589829, 589832, 3, 589830, 589832, 3, 589831, 589832, 3, 589832, 589832, 3, 589833, 589832, 3, 589834, 589832, 3, 589835, 589832, 3, 589836, 589832, 3, 589837, 589832, 3, 589838, 589832, 3, 589839, 589832, 3, 589840, 589832, 3, 589841, 589832, 3, -327661, 655368, 2, -262125, 655368, 2, -196589, 655368, 2, -131053, 655368, 2, -65517, 655368, 2, 19, 655368, 2, 65555, 655368, 2, 131091, 655368, 2, 196627, 655368, 2, 262163, 655368, 2, 327699, 655368, 2, 393235, 655368, 2, 458771, 655368, 2, -262150, 524296, 2, -196614, 524296, 2, -131078, 524296, 2, -65542, 524296, 2, -6, 524296, 2, 65530, 524296, 2, 131066, 524296, 2, 196602, 524296, 2, 262138, 524296, 2, 327674, 524296, 2, 393210, 524296, 2, 458746, 524296, 2, 524282, 524296, 2, -393222, 524296, 1, -458733, 655368, 1, 589843, 655368, 3, 655354, 524296, 3, 589818, 524296, 2, 655355, 589832, 3, 589842, 589832, 3, -458734, 589832, 1, -393221, 589832, 1, -327686, 524296, 2, -393197, 655368, 2, 524307, 655368, 2, -262127, 589832, 2)

[node name="Kitdy" parent="." instance=ExtResource("6")]

[node name="spawn_pointN" type="Marker2D" parent="."]
position = Vector2(-577, -270)

[node name="spawn_pointG" type="Marker2D" parent="."]
position = Vector2(627, -53)

[node name="spawn_pointS" type="Marker2D" parent="."]
position = Vector2(-632, 316)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hearts_container" parent="CanvasLayer" instance=ExtResource("7")]
offset_left = 9.0
offset_top = 9.0
offset_right = 209.0
offset_bottom = 49.0
scale = Vector2(1.5, 1.5)
